--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "bootstrap-sass": "^3.0.0",
-    "elixir-typescript": "^1.1.2",
+    "elixir-typescript-angular2": "^2.0.1",
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
